source/blender/gpu/vulkan/vk_backend.cc
@@ -76,17 +76,18 @@ bool GPU_vulkan_is_supported_driver(VkPhysicalDevice vk_physical_device)
     return false;
   }
 
-  /* NVIDIA drivers below 550 don't work. When sending command to the GPU there is no reply back
-   * when they are finished. Driver 550 should support GTX 700 and above GPUs.
-   *
-   * NOTE: We should retest later after fixing other issues. Allowing more drivers is always
-   * better as reporting to the user is quite limited.
+#ifndef _WIN32
+  /* NVIDIA drivers below 550 don't work on Linux. When sending command to the GPU there is not
+   * always a reply back when they are finished. The issue is reported on the Internet many times,
+   * but there is no mention of a solution. This means that on Linux we can only support GTX900 and
+   * or use MesaNVK.
    */
   if (vk_physical_device_driver_properties.driverID == VK_DRIVER_ID_NVIDIA_PROPRIETARY &&
       conformance_version < VK_MAKE_API_VERSION(1, 3, 7, 2))
   {
     return false;
   }
+#endif
 
   return true;
 }
